fix: resolve SonarCloud bugs and code smells across the addon
Fixes all 9 reported bugs:
- Six S2259 NPEs where callers passed a possibly-null island to
  getIslandLevel() (which null-checks it) and then dereferenced it on the
  next line. The duplicated formula-variable maps are now built by a shared
  FormulaVariables helper that handles a null island in one place.
- CommandReward dereferenced User.getSender(), which is @Nullable, as a
  @NonNull dispatchCommand argument; the sender is now resolved once and
  the reward is skipped with a warning if absent.
- Dead null checks against @NonNull APIs (PlayersManager.getName and
  BlockLimitsListener.getIsland) removed.

Also: empty collections instead of null from the UpgradeInfos lookups,
pattern-matching instanceof, unused imports, lambda and modifier cleanups,
constant extraction, and meaningful assertions in previously assertion-free
tests. UpgradeAPI.equals/hashCode are final, codifying the existing javadoc
that identity is by name alone.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GxCjgLNWwo2uTm6LrQ1eGA